Added TestExport and SchemaExport to avoid creating unstructured json, fixes #860
