# docs/site/content/en/openapi/openapi.yaml
@@ -1355,16 +1355,18 @@ paths:
     post:
       tags:
       - Schema
-      description: Import an previously exported Schema
+      description: Import an previously exported Schema either as a new Schema or
+        to update an existing Schema
       operationId: importSchema
       requestBody:
         content:
           application/json:
             schema:
-              type: string
+              $ref: '#/components/schemas/SchemaExport'
+        required: true
       responses:
         "201":
-          description: Created
+          description: Import a new Schema or update an existing Schema
   /api/schema/{id}:
     get:
       tags:
@@ -1449,11 +1451,11 @@ paths:
         example: 101
       responses:
         "200":
-          description: A JSON representation of the Schema object
+          description: A JSON representation of the SchemaExport object
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/SchemaExport'
   /api/schema/{id}/resetToken:
     post:
       tags:
@@ -1780,16 +1782,18 @@ paths:
     post:
       tags:
       - Test
-      description: Import a previously exported Test
+      description: Import a previously exported Test either as a new Test or to update
+        an existing Test
       operationId: importTest
       requestBody:
         content:
           application/json:
             schema:
-              type: string
+              $ref: '#/components/schemas/TestExport'
+        required: true
       responses:
-        "204":
-          description: Import a new test
+        "201":
+          description: Import a new Test or update an existing Test
   /api/test/summary:
     get:
       tags:
@@ -1898,11 +1902,11 @@ paths:
           type: integer
       responses:
         "200":
-          description: A Test defintion formatted as json
+          description: A Test definition formatted as json
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/TestExport'
   /api/test/{id}/fingerprint:
     get:
       tags:
@@ -2174,6 +2178,41 @@ components:
       - PROTECTED
       - PRIVATE
       type: string
+    Action:
+      required:
+      - id
+      - event
+      - type
+      - config
+      - testId
+      - active
+      - runAlways
+      type: object
+      properties:
+        id:
+          format: int32
+          type: integer
+        event:
+          type: string
+          nullable: false
+        type:
+          type: string
+          nullable: false
+        config:
+          type: array
+          nullable: false
+        testId:
+          format: int32
+          type: integer
+          nullable: false
+        active:
+          type: boolean
+          nullable: false
+        runAlways:
+          type: boolean
+          nullable: false
+        secrets:
+          type: array
     ActionLog:
       description: Action Log
       required:
@@ -2199,6 +2238,21 @@ components:
       - SAME
       - WORSE
       type: string
+    ChangeDetection:
+      required:
+      - id
+      - model
+      - config
+      type: object
+      properties:
+        id:
+          format: int32
+          type: integer
+        model:
+          type: string
+        config:
+          type: array
+          nullable: false
     ComparisonResult:
       description: Result of performing a Comparison
       type: object
@@ -2551,6 +2605,8 @@ components:
       - POSTGRES
       - ELASTICSEARCH
       type: string
+      example: ELASTICSEARCH
+      nullable: false
     ElasticsearchDatastoreConfig:
       description: Type of backend datastore
       required:
@@ -2981,6 +3037,34 @@ components:
             \ array or JSON object"
           type: string
           example: "1724"
+    MissingDataRule:
+      required:
+      - id
+      - maxStaleness
+      - testId
+      type: object
+      properties:
+        id:
+          format: int32
+          type: integer
+        name:
+          type: string
+        labels:
+          type: array
+          items:
+            type: string
+        condition:
+          type: string
+        maxStaleness:
+          format: int64
+          type: integer
+          nullable: false
+        lastNotification:
+          format: date-time
+          type: string
+        testId:
+          format: int32
+          type: integer
     PersistentLog:
       description: Persistent Log
       required:
@@ -3487,6 +3571,23 @@ components:
           type: string
           example: uri:my-schmea:0.1
           nullable: false
+    SchemaExport:
+      description: Represents a Schema with all associated data used for export/import
+        operations.
+      type: object
+      allOf:
+      - $ref: '#/components/schemas/Schema'
+      properties:
+        labels:
+          description: Array of Labels associated with schema
+          type: array
+          items:
+            $ref: '#/components/schemas/Label'
+        transformers:
+          description: Array of Transformers associated with schema
+          type: array
+          items:
+            $ref: '#/components/schemas/Transformer'
     SchemaQueryResult:
       required:
       - schemas
@@ -3964,6 +4065,41 @@ components:
           type: boolean
           example: true
           nullable: false
+    TestExport:
+      description: Represents a Test with all associated data used for export/import
+        operations.
+      type: object
+      allOf:
+      - $ref: '#/components/schemas/Test'
+      properties:
+        variables:
+          description: Array of Variables associated with test
+          type: array
+          items:
+            $ref: '#/components/schemas/Variable'
+        missingDataRules:
+          description: Array of MissingDataRules associated with test
+          type: array
+          items:
+            $ref: '#/components/schemas/MissingDataRule'
+        experiments:
+          description: Array of ExperimentProfiles associated with test
+          type: array
+          items:
+            $ref: '#/components/schemas/ExperimentProfile'
+        actions:
+          description: Array of Actions associated with test
+          type: array
+          items:
+            $ref: '#/components/schemas/Action'
+        subscriptions:
+          allOf:
+          - $ref: '#/components/schemas/Watch'
+          - description: Watcher object associated with test
+        datastore:
+          allOf:
+          - $ref: '#/components/schemas/Datastore'
+          - description: Datastore associated with test
     TestListing:
       type: object
       properties:
@@ -4207,6 +4343,43 @@ components:
           allOf:
           - $ref: '#/components/schemas/ErrorDetails'
           - description: Validation Error Details
+    Variable:
+      required:
+      - id
+      - testId
+      - name
+      - order
+      - labels
+      - changeDetection
+      type: object
+      properties:
+        id:
+          format: int32
+          type: integer
+        testId:
+          format: int32
+          type: integer
+          nullable: false
+        name:
+          type: string
+          nullable: false
+        group:
+          type: string
+        order:
+          format: int32
+          type: integer
+          nullable: false
+        labels:
+          type: array
+          items:
+            type: string
+          nullable: false
+        calculation:
+          type: string
+        changeDetection:
+          type: array
+          items:
+            $ref: '#/components/schemas/ChangeDetection'
     VersionInfo:
       required:
       - version
@@ -4223,3 +4396,32 @@ components:
           description: Timestamp of server startup
           type: integer
           example: 2023-10-18 18:00:57
+    Watch:
+      required:
+      - users
+      - optout
+      - teams
+      - testId
+      type: object
+      properties:
+        id:
+          format: int32
+          type: integer
+        users:
+          type: array
+          items:
+            type: string
+          nullable: false
+        optout:
+          type: array
+          items:
+            type: string
+          nullable: false
+        teams:
+          type: array
+          items:
+            type: string
+          nullable: false
+        testId:
+          format: int32
+          type: integer
